# wagtail-forum

./: .gitignore  README.md  pyproject.toml
example_forum/: Dockerfile  manage.py
example_forum/example_forum/: models.py  wsgi.py
example_forum/example_forum/migrations/: 0001_initial.py
example_forum/example_forum/settings/: base.py  dev.py
example_forum/example_forum/templates/: base.html
example_project/: Dockerfile
example_project/example_project/settings/: base.py  dev.py
example_project/example_project/templates/: base.html
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/editors/quill/: index.js
wagtail_forum/: abstract_models.py  apps.py  fields.py  mixins.py  settings.py  views.py  widgets.py
wagtail_forum.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wagtail_forum/basic/: apps.py  models.py
wagtail_forum/basic/migrations/: 0001_initial.py
wagtail_forum/contrib/api/: apps.py
wagtail_forum/management/commands/: create_dummy_forum.py
wagtail_forum/static/wagtail_forum/css/: base.css
wagtail_forum/static/wagtail_forum/js/: quill.js
wagtail_forum/templates/wagtail_forum/: base.html  layout.html  layout_sidebar.html
wagtail_forum/templates/wagtail_forum/components/: breadcrumbs.html  forum_card.html  sub_forum.html  topic_form.html  topic_list.html
wagtail_forum/templates/wagtail_forum/pages/: create_topic.html  forum.html  forum_index.html  forum_topic_create.html  topic.html
wagtail_forum/templates/wagtail_forum/widgets/: quill.html
